Updated the map title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="main-content">
-        <h1>Toronto Subway Stations Most Accessible to Parks</h1>
+        <h1>Top 5 Park Accessible Subway Stations</h1>
         <section class="introduction">
             <p>Click the subway station on the map or on the sidebar to see each station's park accessibility score</p>
         </section>
