Updated station marker images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main-content">
         <h1>Top 5 Park Accessible Subway Stations</h1>
         <section class="introduction">
-            <p>Click the subway station on the map or on the sidebar to see each station's park accessibility score</p>
+            <p>Click the subway station on the map or on the sidebar to see each station's ranking.</p>
         </section>
         <div id="map" class="map-container"></div>
     </div>
