Add final styling

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </div>
 
     <div class="main-content">
-        <h1>Toronto's Top 5 Greenest Subway Stations:</h1>
+        <h1>Toronto's Top 5 Greenest Subway Stations</h1>
         <section class="introduction">
-            <p>Click the subway station on the map or on the sidebar to see each station's ranking.</p>
+            <p>Zoom in to view and click on any station or use the dropdown menu below. "Hectares" represents the number of hectares of parkland within a  5-minute walk.</p>
         </section>
         <div class="dropdown-container">
             <label for="station-dropdown">Select a Station:</label>
@@ -32,11 +32,15 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; 2024: Chris Hoornaert - <a href="mailto:dev@chrishoornaert.com">dev@chrishoornaert.com</a></p>
+        <p>&copy; 2024: Chris Hoornaert -
+            <a href="https://www.chrishoornaert.com">www.chrishoornaert.com</a> -
+            <a href="mailto:dev@chrishoornaert.com">dev@chrishoornaert.com</a>
+        </p>
     </footer>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-providers@1.10.2/dist/leaflet-providers.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier-Leaflet/0.2.6/oms.min.js"></script>
     <script src="js/map.js"></script>
 </body>
 </html>
