--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 </head>
 <body>
-    <div id="loading-overlay">
+    <!-- <div id="loading-overlay">
         <div id="loading-message">Loading...</div>
-    </div>
+    </div> -->
 
     <div class="main-content">
         <h1>Toronto's Top 5 Greenest Subway Stations</h1>
